# chess

./: Cargo.toml
.VSCodeCounter/2025-02-02_18-11-33/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: app.rs  board.rs  board_position.rs  colors.rs  cursor.rs  lib.rs  main.rs  piece.rs  render_layer.rs
src/app/: camera.rs  cursor.rs  mod.rs  render_layer.rs  window.rs
src/board/: board_position.rs  chessboard.rs  mod.rs  pieces.rs
src/handler/: color_handler.rs  common.rs  handler.rs  mod.rs  piece_sprite_handler.rs
src/turn/: common.rs  highlight_move.rs  mod.rs  selector.rs
