[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1" }
enum-map = "2.7.3"
itertools = "0.14.0"
map-range = "0.1.2"
pleco = "0.5.0"
strum = { version = "0.26.3", features = ["derive"] }

# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3
